[project]
name = "fastapi-replicate-medium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.8.5",
    "uvicorn>=0.34.0",
]


[tool.uv]
[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
